<?xml version="1.0"?>
<package format="2">
  <name>sfy_forklift_global_planner</name>
  <version>0.0.1</version>
  <description>The sfy_forklift_global_planner package</description>

  <maintainer email="clint_sfy@163.com">Fengyuan Shen</maintainer>
  <author email="clint_sfy@163.com">Fengyuan Shen</author>

  <license>GPL</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sfy_forklift_msgs</build_depend>

  <build_export_depend>cmake_modules</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msg</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>cmake_modules</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sfy_forklift_msgs</exec_depend>

  <depend>base_local_planner</depend>
  <depend>costmap_2d</depend>
  <depend>costmap_converter</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_core</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>

  <export>
    <nav_core plugin="${prefix}/sfy_forklift_global_planner_plugin.xml" />
  </export>
</package>