<package format="2">
    <name>sfy_forklift_msgs</name>
    <version>1.0.0</version>
    <description>
        The agv msgs package provides all the messages for AGV Forklift Robot
    </description>
    <author>Fengyuan Shen</author>
    <maintainer email="clint_sfy@163.com">Fengyuan Shen</maintainer>
    <license>GPL 3.0</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>actionlib</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>message_runtime</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>

    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>geometry_msgs</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>


    <exec_depend>actionlib</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>message_generation</exec_depend>
    <exec_depend>message_runtime</exec_depend>

    <export>
    </export>
</package>
